# stepsons-of-universe-agents

./: AGENTS.md  README.md  TODO.md
PoC/: README.md
PoC/orcish-raid-animation-contract/: Cargo.toml  README.md
PoC/orcish-raid-animation-contract/assets/: README.md
PoC/orcish-raid-animation-contract/src/: actors.rs  animation.rs  contract.rs  demo.rs  fx.rs  main.rs  map_gen.rs  runtime.rs  state.rs
notes/: orcish-raid-extraction-and-animation-plan-2026-03-29.md  rifrl-onboarding-automation-plan-2026-03-28.md  rifrl-onboarding-automation-status-2026-03-28.md  rifrl-primary-action-talk-story-2026-03-28.md  rifrl-remote-inspection.md  rifrl-umbrella-repo-design-2026-03-28.md  rifrl-workspace-facts-2026-03-28.md
